# diabetes-prediction

./: README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
models/: diabetes_xgb.joblib
src/diabetes_pred/app/: streamlit_app.py
src/diabetes_pred/data/: schema.py
src/diabetes_pred/inference/: predict.py
src/diabetes_pred/modeling/: evaluate.py  model.py  train.py
